--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <main>
     <table id="image-table">
       <tr>
-        <td>1<img id="image1" src="" width="200"></td>
-        <td>2<img id="image2" src="" width="200"></td>
-        <td>3<img id="image3" src="" width="200"></td></td>
+        <td><img id="image1" src="" width="200"></td>
+        <td><img id="image2" src="" width="200"></td>
+        <td><img id="image3" src="" width="200"></td></td>
       </tr>
     </table>
+    <ul id="image-list">
+
+    </ul>
 
   </main>
 
